<resources>
    <string name="app_name">CybershopAPP</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="number">Number</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cybershop">CYBERSHOP</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="register_client">Register Client</string>
    <string name="map">Map</string>
    <string name="preferences">Preferences</string>
    <string name="client_registered">Client Registered</string>
    <string name="error_registering">Error while register</string>
    <string name="required_data">Please, fill the required fields</string>
    <string name="Are_you_sure_alert_dialog">Are you sure?</string>
    <string name="delete_client">Delete client</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_required">Name*</string>
    <string name="surname_required">Surname*</string>
    <string name="phone_number_required">Phone Number*</string>
    <string name="Welcome_to">Welcome to</string>
    <string name="select_a_profile_image">Select a profile image</string>
    <string name="select_the_correct_location">Select the correct location</string>
    <string name="vip">Is this user VIP?: </string>
    <string name="date">Register Date: </string>
    <string name="isVIP">Yes</string>
    <string name="isNotVip">No</string>
    <string name="UnknownRegistering">Unknown</string>
    <string name="type">Type of product</string>
    <string name="price">Price</string>
    <string name="inStock">In Stock</string>
    <string name="stock">"Is this product in Stock?: "</string>
    <string name="origin">Origin of the Product</string>
    <string name="type_required">Type*</string>
    <string name="price_required">Price*</string>
    <string name="origin_required">Origin</string>
    <string name="register_product">Register Product</string>
    <string name="product_registered">Product Registered</string>
    <string name="yes_it_is">It is available</string>
    <string name="no_it_isnt">It is not available</string>
    <string name="repaired">Repaired</string>
    <string name="not_repaired">Not repaired</string>
    <string name="delete_repair">Delete Repair</string>
    <string name="component">Component</string>
    <string name="address">Shipment Address</string>
    <string name="repairDate">Repaired Date</string>
    <string name="register_repair">Register Repair</string>
    <string name="component_required">Component*</string>
    <string name="address_required">Shipment Address*</string>
    <string name="shipment_date">Shipment Date: </string>
    <string name="repaireddate">Repaired Date</string>
    <string name="repair_registered">Repair registered</string>
    <string name="repair_date">Repair Date: </string>
    <string name="error_updating">Error while updating</string>
    <string name="not_shipped">No shipped yet</string>
    <string name="ErrorLoadingMap">Error while loading Clients on Map</string>
    <string name="Spanish">Spanish</string>
    <string name="English">English</string>
    <string name="selectLanguage">Select language</string>
    <string name="productUpdated">Product updated successfully</string>
    <string name="dateNotRegistered">Date not registered</string>
    <string name="clientDeleted">Client deleted</string>
    <string name="client_not_deleted">Client not deleted</string>
    <string name="error_taking_details">Error taking details</string>
    <string name="fail_trying_to_mark_favourite">Fail trying to mark favourite</string>
    <string name="registeredClient"> has been registered</string>
    <string name="client_updated">Client updated</string>
    <string name="product_deleted">Product deleted</string>
    <string name="error_deleting_product">Error deleting product</string>
    <string name="repair_deleted">Repair deleted</string>
    <string name="error_deleting_repair">Error deleting repair</string>
    <string name="error_listing_data">Error listing data</string>
    <string name="required_fields">Complete required fields</string>
    <string name="repair_updated">Repair updated</string>
    <string name="phoneNumberDigits">Phone number must have only 9 digits</string>
</resources>